lab03/13/internal/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-bluegreen-preview
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: rollout-bluegreen-preview.159.122.179.241.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollout-bluegreen-preview
                port:
                  number: 80
